[tool.poetry]
name = "rpa-netvisor"
version = "1.0.0"
description = "A collection of Netvisor tools and libraries for RPA"
authors = [
	"Roboost <roboost@roboost.fi>",
]
license = "Apache-2.0"
readme = "README.md"

homepage = "https://roboost.fi/projects/rpa-netvisor"
repository = "https://github.com/roboostsolutions/rpa-netvisor"

keywords = ["robotframework", "rpa", "automation", "netvisor"]
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Development Status :: 3 - Alpha",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Libraries",
	"Framework :: Robot Framework :: Library",
	"Framework :: Robot Framework",
	"Programming Language :: Python :: 3.8",
]

packages = [
	{ include = "RPA", from = "src" },
	{ include = "tests", format = "sdist" }
]

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.7.9"
pylint = "^2.4.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
mock = "^4.0.2"
mypy = "^0.782"

[tool.black]
target-version = ["py36", "py37", "py38"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-branch"
testpaths = ["tests/python"]
